--- a/Client/RecM.Client.csproj
+++ b/Client/RecM.Client.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
     <ItemGroup>
       <PackageReference Include="ScaleformUI" Version="5.3.0" />
+      <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     </ItemGroup>
     <ItemGroup>
       <Reference Include="FxEvents.Client">
