--- a/Client/RecM.Client.csproj
+++ b/Client/RecM.Client.csproj
@@ -10,19 +10,16 @@
       <Compile Remove="..\Shared\Dummy.cs" />
     </ItemGroup>
     <ItemGroup>
+      <PackageReference Include="FxEvents.FiveM.Client" Version="2.9.1" />
       <PackageReference Include="ScaleformUI" Version="5.3.0" />
       <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     </ItemGroup>
     <ItemGroup>
-      <Reference Include="FxEvents.Client">
-        <HintPath>..\_dependencies\Client\FxEvents.Client.dll</HintPath>
-      </Reference>
       <Reference Include="Newtonsoft.Json">
         <HintPath>..\_dependencies\Newtonsoft.Json.dll</HintPath>
       </Reference>
     </ItemGroup>
     <ItemGroup>
-      <Folder Include="Menus\" />
       <Folder Include="Utils\" />
     </ItemGroup>
     <ItemGroup>
