--- a/Client/RecM.Client.csproj
+++ b/Client/RecM.Client.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
     <ItemGroup>
       <PackageReference Include="FxEvents.FiveM.Client" Version="2.9.1" />
-      <PackageReference Include="ScaleformUI" Version="5.3.0" />
+      <PackageReference Include="ScaleformUI" Version="5.3.2" />
       <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     </ItemGroup>
     <ItemGroup>
@@ -28,4 +28,7 @@
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
       <Exec Command="$(SolutionDir)build.bat &quot;$(TargetDir)$(TargetFileName)&quot; &quot;Client&quot;" />
     </Target>
+    <ItemGroup>
+      <PackageReference Update="CitizenFX.Core.Client" Version="1.0.8384" />
+    </ItemGroup>
 </Project>
